@@ -6,6 +6,7 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.057
+installer = MakeMaker
 
 ; this needs to be installed in order for Makefile.PL to be executed
 ; successfully (likely triggered by [TestRunner], via 'dzil test' or 'dzil
@@ -15,5 +16,9 @@ Devel::CheckBin = 0
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
+
+[DynamicPrereqs]
+-raw = $WriteMakefileArgs{PREREQ_PM}{'Dist::Zilla::Plugin::ModuleBuildTiny'} = '0.007'
+-raw = if eval 'use Dist::Zilla::Plugin::ModuleBuildTiny; 1';
 
 [Test::CleanNamespaces]
