@@ -5,6 +5,7 @@ use Test::More;
 use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::DZil;
 use Path::Tiny;
+use Test::Fatal;
 
 my $tzil = Builder->from_config(
     { dist_root => 't/does-not-exist' },
@@ -19,7 +20,12 @@ my $tzil = Builder->from_config(
         },
     },
 );
-$tzil->build;
+
+is(
+    exception { $tzil->build },
+    undef,
+    'nothing exploded',
+);
 
 my $build_dir = path($tzil->tempdir)->child('build');
 my $file = $build_dir->child('Makefile.PL');
