@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - now also testing interaction with [ModuleBuild],
             [ModuleBuildTiny], and [MakeMaker::Awesome]
+          - Makefile.PL/Build.PL content inserted a little lower in the file
 
 0.002     2014-04-11 03:50:21Z
           - add a runtime prereq on Devel::CheckBin, so that the generated
